<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:theme="@style/FullImgToolbar"
        app:titleTextColor="@android:color/white"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/about_card"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:cardBackgroundColor="@color/colorPrimaryLight"
            app:cardElevation="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/about_share_app">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="172dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <TextView
                    android:id="@+id/about_card_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/covornavirus_info_text"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/about_link"
                    />
                <TextView
                    android:id="@+id/about_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/covornavirus_info_link"
                    android:textSize="20sp"
                    android:textColorLink="@android:color/white"
                    android:clickable="true"
                    android:focusable="true"
                    android:autoLink="web"
                    app:layout_constraintTop_toBottomOf="@+id/about_card_text"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <Button
            android:id="@+id/about_share_app"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:textSize="18sp"
            app:icon="@drawable/ic_share_black_24dp"
            app:iconGravity="end"
            app:layout_constraintTop_toBottomOf="@id/about_card"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/about_edittext"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/about_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_share_app"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/about_edittext_view"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:hint="@string/about_edit_text_hint"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minLines="3"
                style="@style/EditTextInfo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/about_send"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidth="2dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimaryDark"/>
            </com.google.android.material.textfield.TextInputLayout>
            <FrameLayout
                android:id="@+id/about_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/about_edittext_view"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <Button
                    android:id="@+id/about_send_btn"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:textSize="18sp"
                    app:icon="@drawable/ic_send_black_24dp"
                    app:iconGravity="end"
                    />
                <ProgressBar
                    android:id="@+id/about_send_spinner"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:visibility="gone"
                    android:layout_gravity="end"/>
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>